ds_algo/output.txt
g++ -c graph.cpp
g++ -g main.cpp graph.o -o debug.out
main.cpp: In function ‘int main()’:
main.cpp:9:16: warning: empty parentheses were disambiguated as a function declaration [-Wvexing-parse]
    9 |     Graph graph();
      |                ^~
main.cpp:9:16: note: remove parentheses to default-initialize a variable
    9 |     Graph graph();
      |                ^~
      |                --
main.cpp:9:16: note: or replace parentheses with braces to value-initialize a variable
main.cpp:10:12: error: request for member ‘printGraph’ in ‘* graph’, which is of non-class type ‘Graph()’
   10 |     graph->printGraph();
      |            ^~~~~~~~~~
make: *** [Makefile:10: debug] Error 1
